# YTRAG

./: pyproject.toml  requirements.txt
data/text_files/: RAG_traditional.txt  machine_learning.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
